# QcURL

./: .gitignore  CMakeLists.txt  Readme.md  curlhandler.cpp  curlhandler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
